add tooltipPosition option

--- a/main.less
+++ b/main.less
@@ -45,6 +45,17 @@
       transform: rotate(45deg);
     }
 
+    &.top {
+      .slider-current-tooltip {
+        top: initial;
+        bottom: 20px;
+      }
+      .slider-current-tooltip-arrow {
+        top: initial;
+        bottom: 18px;
+      }
+    }
+
     &.grabbing {
       cursor: grabbing;
     }
