--- a/main.less
+++ b/main.less
@@ -21,6 +21,7 @@
     cursor: grab;
     margin-left: -7.5px;
     z-index: 1002;
+    transition: left 0.1s;
 
     .slider-current-tooltip {
       display: none;
@@ -84,5 +85,6 @@
     background: #337ab7;
     border-radius: 3px;
     z-index: 1001;
+    transition: left,right 0.1s;
   }
 }
